<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/basics_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:columnCount="3"
    app:rowCount="11"
    tools:showIn="@layout/content_beer">

    <TextView
        app:layout_row="0"
        android:text="@string/basics"
        android:padding="@dimen/text_padding_small"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_columnSpan="3">
    </TextView>

    <View
        app:layout_row="0"
        android:layout_height="5dp"
        android:background="@color/colorAccent"
        app:layout_columnSpan="3"
        android:layout_marginBottom="4dp"/>

    <TextView
        app:layout_row="2"
        app:layout_column="0"
        android:text="@string/volume"
        android:padding="@dimen/text_padding_small">
    </TextView>

    <TextView
        android:id="@+id/volume_value"
        app:layout_row="2"
        app:layout_column="1"
        tools:text="20"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:padding="@dimen/text_padding_small">
    </TextView>

    <TextView
        android:id="@+id/volume_unit"
        app:layout_row="2"
        app:layout_column="2"
        tools:text="litres"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:padding="@dimen/text_padding_small">
    </TextView>

    <TextView
        app:layout_row="3"
        app:layout_column="0"
        android:text="@string/boil_volume"
        android:padding="@dimen/text_padding_small">
    </TextView>

    <TextView
        android:id="@+id/boil_volume_value"
        app:layout_row="3"
        app:layout_column="1"
        tools:text="20"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:padding="@dimen/text_padding_small">
    </TextView>

    <TextView
        android:id="@+id/boil_volume_unit"
        app:layout_row="3"
        app:layout_column="2"
        tools:text="litres"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:padding="@dimen/text_padding_small">
    </TextView>

    <TextView
        app:layout_row="4"
        app:layout_column="0"
        android:text="@string/abv"
        android:padding="@dimen/text_padding_small">
    </TextView>

    <TextView
        android:id="@+id/abv_value"
        app:layout_row="4"
        app:layout_column="2"
        tools:text="6%"
        android:padding="@dimen/text_padding_small"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1">
    </TextView>

    <TextView
        app:layout_row="5"
        app:layout_column="0"
        android:text="@string/target_fg"
        android:padding="@dimen/text_padding_small">
    </TextView>

    <TextView
        android:id="@+id/target_fg_value"
        app:layout_row="5"
        app:layout_column="2"
        tools:text="1010"
        android:padding="@dimen/text_padding_small"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1">
    </TextView>

    <TextView
        app:layout_row="6"
        app:layout_column="0"
        android:text="@string/target_og"
        android:padding="@dimen/text_padding_small">
    </TextView>

    <TextView
        android:id="@+id/target_og_value"
        app:layout_row="6"
        app:layout_column="2"
        tools:text="1056"
        android:padding="@dimen/text_padding_small"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1">
    </TextView>

    <TextView
        app:layout_row="7"
        app:layout_column="0"
        android:text="@string/ebc"
        android:padding="@dimen/text_padding_small">
    </TextView>

    <TextView
        android:id="@+id/ebc_value"
        app:layout_row="7"
        app:layout_column="2"
        tools:text="17"
        android:padding="@dimen/text_padding_small"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1">
    </TextView>

    <TextView
        app:layout_row="8"
        app:layout_column="0"
        android:text="@string/srm"
        android:padding="@dimen/text_padding_small">
    </TextView>

    <TextView
        android:id="@+id/srm_value"
        app:layout_row="8"
        app:layout_column="2"
        tools:text="8.5"
        android:padding="@dimen/text_padding_small"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1">
    </TextView>

    <TextView
        app:layout_row="9"
        app:layout_column="0"
        android:text="@string/ph"
        android:padding="@dimen/text_padding_small">
    </TextView>

    <TextView
        android:id="@+id/ph_value"
        app:layout_row="9"
        app:layout_column="2"
        tools:text="4.4"
        android:padding="@dimen/text_padding_small"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1">
    </TextView>

    <TextView
        app:layout_row="10"
        android:text="@string/attenuation_level"
        app:layout_column="0"
        android:padding="@dimen/text_padding_small">
    </TextView>

    <TextView
        android:id="@+id/attenuation_level_value"
        app:layout_row="10"
        app:layout_column="2"
        tools:text="82.14%"
        android:padding="@dimen/text_padding_small"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1">
    </TextView>
</android.support.v7.widget.GridLayout>